# Unofficial_RETFound_pip

./: README.md  README.md.txt  pyproject.toml  pyproject.toml.txt
retfound/: RF_README.md  engine_finetune.py  latent_feature.ipynb  main_finetune.py
