[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retfound-unofficial"
version = "0.1.0"
description = "An unofficial PyPI package for the RETFound foundation model."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name="Original RETFound Authors: Zhou et al." }
]

maintainers = [
  { name="James C. Porter", email="jamesclaxporter@gmail.com" } 
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "timm>=0.9.2",
    "numpy>=1.26.4",
    "pandas",
    "scipy",
    "scikit-learn>=1.4.2",
    "opencv-python>=4.9.0.80",
    "Pillow>=10.2.0",
    "pycm>=4.0",
    "matplotlib>=3.8.4",
    "scikit-multilearn>=0.2.0",
    "huggingface-hub>=0.23.4",
    "tensorboard>=2.17.0"
]

[project.urls]
"Original Repository" = "https://github.com/rmaphoh/RETFound_MAE"
"Source Commit" = "https://github.com/rmaphoh/RETFound_MAE/commit/ae9a9ecf37857cf47b8aa9f87cd6f710d75db287"

[tool.setuptools.packages.find]
where = ["."]
include = ["retfound", "retfound.*"]